[gd_scene load_steps=3 format=3 uid="uid://ba78ji7uuaebr"]

[ext_resource type="Script" path="res://Core/Board/placement_manager.gd" id="1_kxe0s"]
[ext_resource type="PackedScene" uid="uid://2bfvk1qmbvgr" path="res://Core/Board/placement_area.tscn" id="1_xrqw0"]

[node name="PlacementManager" type="Node2D"]
script = ExtResource("1_kxe0s")

[node name="PlacementAreaUp" parent="." instance=ExtResource("1_xrqw0")]
unique_name_in_owner = true

[node name="PlacementAreaRight" parent="." instance=ExtResource("1_xrqw0")]
unique_name_in_owner = true

[node name="PlacementAreaLeft" parent="." instance=ExtResource("1_xrqw0")]
unique_name_in_owner = true
